<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Application</string>
    <string name="input_name"><xliff:g example="Yassine" id="name">%s</xliff:g></string>
    <string name="add_whipped_cream">Add whipped creame</string>
    <string name="add_chocolate">Add chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank you</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">chocolate</string>
    <string name="order_summry">ordersummry</string>
</resources>
